--- a/assets/css/aboutthecourse.css
+++ b/assets/css/aboutthecourse.css
@@ -6,28 +6,31 @@ body {
   height: 100vh;
   color: #3A3737;
   background: #FFF;
+  overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 /* Add a black background color to the top navigation
  */
 
- .navbar {
-   background-color: #FFF;
-   overflow: hidden;
-   height: 7vh;
+.navbar {
+  background-color: #FFF;
+  overflow: hidden;
+  height: 7vh;
 
- }
+}
 
- .logo img {
-   float: left;
-   padding-left: 1%;
-   height: 6vh;
-
- }
+.logo img {
+  float: left;
+  padding-left: 1%;
+  height: 6vh;
+  padding-top: .5%;
+}
 
 .topnav {
   background-color: #FFF;
   overflow: hidden;
+  padding-right: 2%;
 }
 
 /* Style the links inside the navigation bar */
@@ -48,7 +51,10 @@ body {
 }
 
 /* Add an active class to highlight the current page */
-
+.topnav a.current{
+  font-weight: 900;
+  text-decoration: underline;
+}
 
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
@@ -92,31 +98,28 @@ h1 {
   color: #4264DD;
   font-size: 250%;
   font-weight: 900%;
-  padding-top: 2%;
+  padding-top: 1%;
 }
-
-
-
 
 .bar img {
   height: 3.5vh;
   padding-left: 0.5%;
-
 }
 
 .learn {
-display: block;
-top: 37%;
-padding-top: 1%;
-padding-bottom: 9%;
-text-align: center;
-align-items: center;
-height: 32vh;
-width: 130vh;
-position: absolute;
-background: #FFFFFF;
-box-shadow: 0px 4px 35px rgba(0, 0, 0, 0.25);
-left: 15%;
+  margin-top: 5%;
+  display: block;
+  text-align: center;
+  align-items: center;
+  max-width: 60%;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 35px rgba(0, 0, 0, 0.25);
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 1%;
+  padding-bottom: 2%;
+  margin-bottom: 5%;
+  border-radius: 5px;
 }
 
 .barr img {
@@ -138,18 +141,18 @@ h2 {
 }
 
 .why{
-display: block;
-top:99%;
-padding-top: 1%;
-padding-bottom: 9%;
-text-align: center;
-align-items: center;
-height: 32vh;
-width: 130vh;
-position: absolute;
-background: #FFFFFF;
-box-shadow: 0px 4px 35px rgba(0, 0, 0, 0.25);
-left: 15%;
+  padding-top: 1%;
+  display: block;
+  text-align: center;
+  align-items: center;
+  max-width: 60%;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 35px rgba(0, 0, 0, 0.25);
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 2%;
+  border-radius: 5px;
+  margin-bottom: 5%;
 }
 
 .barrr img {
@@ -169,18 +172,18 @@ h2 {
   text-align: justify;
 }
 .who{
-display: block;
-top:161%;
-padding-top: 1%;
-padding-bottom: 9%;
-text-align: center;
-align-items: center;
-height: 62vh;
-width: 130vh;
-position: absolute;
-background: #FFFFFF;
-box-shadow: 0px 4px 35px rgba(0, 0, 0, 0.25);
-left: 15%;
+  padding-top: 1%;
+  display: block;
+  text-align: center;
+  align-items: center;
+  max-width: 60%;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 35px rgba(0, 0, 0, 0.25);
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 2%;
+  margin-bottom: 5%;
+  border-radius: 5px;
 }
 
 .barrrr img {
@@ -231,33 +234,40 @@ h3 {
 }
 
 .footer {
-  height: 27vh;
-  width: 184vh;
+  position: relative;
+  /* height: 20vh; */
+  width: 100%;
   background-color: #4264DD;
-  top: 255%;
-  position: absolute;
+  bottom: 0px;
+  /* top: 255%; */
+  /* position: absolute; */
   align-items: center;
   text-align: center;
   color: #FFF;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 h4 {
-  padding-bottom: 1%;
+  padding-top: 25px;
+  /* padding-bottom: 1%; */
   font-weight: bold;
 }
+
 .contacts{
   display: flex;
   flex-direction: row;
-  padding-left: 15%;
+  /* padding-left: 15%; */
 }
 
 .contact1{
-  padding-right: 26%;
-
+  /* padding-right: 26%; */
+  width: 50%;
 }
 
 .contact2{
-  padding-left: 22%;
+  /* padding-left: 22%; */
+  width: 50%;
 }
 
 .email img{
