--- a/assets/css/coursematerial.css
+++ b/assets/css/coursematerial.css
@@ -6,24 +6,25 @@ body {
   height: 100vh;
   color: #3A3737;
   background: #FDFDFD;
+  overflow-x: hidden;
 }
 
 /* Add a black background color to the top navigation
  */
 
- .navbar {
-   background-color: #FDFDFD;
-   overflow: hidden;
-   height: 7vh;
+.navbar {
+  background-color: #FDFDFD;
+  overflow: hidden;
+  height: 7vh;
+  padding-right: 2%;
+}
 
- }
-
- .logo img {
-   float: left;
-   padding-left: 1%;
-   height: 6vh;
-
- }
+.logo img {
+  float: left;
+  padding-left: 1%;
+  height: 6vh;
+  padding-top: .5%;
+}
 
 .topnav {
   background-color: #FFF;
@@ -48,7 +49,10 @@ body {
 }
 
 /* Add an active class to highlight the current page */
-
+.topnav a.current{
+  font-weight: 900;
+  text-decoration: underline;
+}
 
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
@@ -84,8 +88,6 @@ body {
   flex-direction: column;
   text-align: center;
   align-items: center;
-
-
 }
 
 h1 {
@@ -95,62 +97,56 @@ h1 {
   padding-top: 1%;
 }
 
-
-
-
 .bar img {
   height: 3.5vh;
   padding-left: 0.5%;
-
+  /* padding-bottom: 5%; */
 }
 
 
 h2 {
+  padding-top: 3%;
   font-size: 160%;
   font-weight: bold;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 .footer {
-  height: 27vh;
-  width: 184vh;
+  position: relative;
+  /* height: 20vh; */
+  width: 100%;
   background-color: #4264DD;
-  top: 110%;
-  position: absolute;
+  bottom: 0px;
+  /* top: 255%; */
+  /* position: absolute; */
   align-items: center;
   text-align: center;
   color: #FFF;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 h4 {
-  padding-bottom: 1%;
+  /* position: relative;
+  top: 40%; */
+  padding-top: 25px;
+  /* padding-bottom: 1%; */
   font-weight: bold;
 }
+
 .contacts{
   display: flex;
   flex-direction: row;
-  padding-left: 15%;
+  /* padding-left: 15%; */
 }
 
 .contact1{
-  padding-right: 26%;
-
+  /* padding-right: 26%; */
+  width: 50%;
 }
 
 .contact2{
-  padding-left: 20%;
+  /* padding-left: 22%; */
+  width: 50%;
 }
 
 .email img{
@@ -159,79 +155,77 @@ h4 {
 }
 
 .material {
-height: 54vh;
-width: 104vh;
-background-color: #3D5CCB;
-top: 37%;
-position: absolute;
-align-items: center;
-text-align: center;
-color: #FFF;
-left: 21%;
-border-radius: 18px;
+  height: 54vh;
+  width: 104vh;
+  background-color: #3D5CCB;
+  top: 37%;
+  /* position: absolute; */
+  align-items: center;
+  text-align: center;
+  color: #FFF;
+  left: 21%;
+  border-radius: 18px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5%;
 }
 
 .titlee {
   padding-bottom: 3vh;
   height: 7vh;
-
-
-
 }
 
 .boxes {
   height:44vh;
-  width: 104vh;
-  position: absolute;
+  width: 100%;
+  /* position: absolute; */
   background-color: #4264DD;
-  position: absolute;
+  /* position: absolute; */
+  position: relative;
   align-items: center;
   text-align: center;
   color: #FFF;
   border-radius: 0px 0px 18px 18px;
   display: flex;
   flex-direction: row;
-
+  /* margin-left: auto;
+  margin-right: auto; */
+  justify-content: space-around;
+  margin-bottom: 20%;
 }
 
 .box1 {
-top: 16%;
-height: 30vh;
-width: 30vh;
-left: 19%;
-
-position: absolute;
-align-items:center;
-text-align: center;
-border: 1px solid #FFFFFF;
-box-sizing: border-box;
+  /* top: 16%;
+  height: 30vh;
+  width: 50%;
+  left: 19%; */
+  width: 40%;
+  height: 80%;
+  /* position: absolute; */
+  align-items:center;
+  text-align: center;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
 }
 
 .box1 p{
-
-font-weight: normal;
-font-size: 90%;
-
-
+  font-weight: normal;
+  font-size: 90%;
 }
 
-
-
 .box2{
-  top: 16%;
+  /* top: 16%;
   height: 30vh;
   width: 30vh;
-  left: 51%;
+  left: 51%; */
+  height: 80%;
+  width: 40%;
 
-  position: absolute;
+  /* position: absolute; */
   align-items:center;
   text-align: center;
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
 
 }
-
-
-
-
 }
